--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,11 +19,17 @@
         </activity>
         <activity
             android:name=".Jeu"
-            android:label="@string/title_activity_jeu" >
+            android:label="@string/title_activity_jeu"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".RankingActivity"
-            android:label="@string/title_activity_ranking" >
+            android:label="@string/title_activity_ranking"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".EndGameOptions"
+            android:label="@string/title_activity_end_game_options" >
         </activity>
     </application>
 
